Fixed the horizontal scroll on mobile site for tutorial.

--- a/frontend/css/style.scss
+++ b/frontend/css/style.scss
@@ -85,6 +85,13 @@ p {
     padding: 0.2em;
 }
 
+pre {
+    display: block;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: pre-wrap;
+}
+
 code {
     font-family: $code;
     font-size: 12px;
@@ -393,6 +400,9 @@ b {
         }
     }
 
+    .tutorial-content {
+
+    }
 
 }
 
